[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/player/character_0000.png" type="Texture" id=2]
[ext_resource path="res://assets/player/character_0001.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 10 )

[sub_resource type="CircleShape2D" id=3]
radius = 14.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4.5, 8 )

[sub_resource type="CapsuleShape2D" id=5]
radius = 12.0254
height = 0.0

[node name="Player" type="KinematicBody2D" groups=["player"]]
collision_layer = 0
script = ExtResource( 1 )
dashHazardMask = 2

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -9 )
frames = SubResource( 2 )
animation = "run"
frame = 1
playing = true
offset = Vector2( 0, -2.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -9 )
shape = SubResource( 1 )

[node name="CayoteTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="PickUpArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickUpArea"]
position = Vector2( 0, -12 )
shape = SubResource( 3 )

[node name="HazardArea" type="Area2D" parent="."]
position = Vector2( 0, -2 )
collision_layer = 0
collision_mask = 34

[node name="CollisionShape2D" type="CollisionShape2D" parent="HazardArea"]
position = Vector2( 0, -8 )
shape = SubResource( 4 )

[node name="DashArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="DashArea"]
position = Vector2( 0, -12 )
rotation = 1.56761
shape = SubResource( 5 )
disabled = true

[connection signal="area_entered" from="HazardArea" to="." method="_on_HazardArea_area_entered"]
